<resources>
    <string name="app_name">Philosofy</string>
    <string name="title_activity_backgrounds">Quote Background</string>
    <string name="title_activity_quotes">Quotes</string>
    <string name="title_activity_downloadable_images">Quote Background</string>
    <string name="title_activity_downloadable_fonts">Fonts</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="label_editor_cardview">Editor</string>
    <string name="label_photos_cardview">Photos</string>
    <string name="label_camera_cardview">Camera</string>
    <string name="label_colors_cardview">Colors</string>
    <string name="label_download_cardview">Download</string>
    <string name="labels_quotes_cardview">Quotes</string>
    <string name="share_app_title">Thank you for sharing this app!</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="app_id_admob">ca-app-pub-7081714491564041~3997296398</string>
    <string name="ad_id_main_activity">ca-app-pub-7081714491564041/3857695597</string>
    <string name="ad_id_quotes_activity">ca-app-pub-7081714491564041/1956869684</string>
    <string name="ad_id_downloadable_fonts_activity">ca-app-pub-7081714491564041/8713849720</string>
    <string name="ad_id_downloadable_images_activity">ca-app-pub-7081714491564041/9480136487</string>
    <string name="text_tool_name">Text</string>
    <string name="image_tool_name">Image</string>
    <string name="background_tool_name">Background</string>
    <string name="effects_tool_name">Effects</string>
    <string name="quote_tool_name">Quote</string>
    <string name="text_shadow">Shadow</string>
    <string name="shadow_x_pos">X</string>
    <string name="shadow_y_pos">Y</string>
    <string name="color_chooser_title">Choose Color</string>
    <string name="cancel_color_chooser">Cancel</string>
    <string name="done_color_chooser">Done</string>
    <string name="no_internet_quote">\"We are all now connected by\nthe Internet, like neurons
        in a\ngiant brain.\"\n-Stephen Hawking</string>
    <string name="reload">RELOAD</string>
    <string name="error_large_preview">Something went wrong.\nTry checking your connection.</string>
    <string name="nature_category">Nature</string>
    <string name="backgrounds_category">Backgrounds</string>
    <string name="science_category">Science</string>
    <string name="education_category">Education</string>
    <string name="computer_category">Computer</string>
    <string name="people_category">People</string>
    <string name="feelings_category">Feelings</string>
    <string name="fashion_category">Fashion</string>
    <string name="travel_category">Travel</string>
    <string name="places_category">Places</string>
    <string name="food_category">Food</string>
    <string name="health_category">Health</string>
    <string name="animals_category">Animals</string>
    <string name="sports_category">Sports</string>
    <string name="buildings_category">Buildings</string>
    <string name="industry_category">Industry</string>
    <string name="business_category">Business</string>
    <string name="music_category">Music</string>
    <string name="downloaded_images">Downloaded</string>
    <string name="category_nav_drawer_open">Categories Drawer Open</string>
    <string name="category_nav_drawer_close">Categories Drawer Close</string>
    <string name="label_downloaded_images">Downloaded</string>
    <string name="label_images_categories">Categories</string>
    <string name="pixabay_url">https://pixabay.com/</string>
    <string name="pixabay_api_key">10688485-77ce504cf261ece34fe330fb9</string>
    <string name="google_fonts_api_key">AIzaSyDRoP60Rzw81qdcpwNUrbikdNaA3QR4wHY</string>
    <string name="latin_font_preview" translatable="false">This is font.</string>
    <string name="devanagari_font_preview" translatable="false">यह एक फ़ॉन्ट है।</string>
    <string name="arabic_font_preview" translatable="false">هذا هو الخط.</string>
    <string name="chinese_font_preview" translatable="false">这是一种字体。</string>
    <string name="japanese_font_preview" translatable="false">これはフォントです。</string>
    <string name="korean_font_preview" translatable="false">이것은 글꼴입니다.</string>
    <string name="cyrillic_font_preview" translatable="false">это шрифт</string>
    <string name="tamil_font_preview" translatable="false">இது ஒரு எழுத்துரு.</string>
    <string name="telugu_font_preview" translatable="false">ఇది ఒక ఫాంట్.</string>
    <string name="bengali_font_preview" translatable="false">এটি একটি ফন্ট।</string>
    <string name="short_latin_font_preview" translatable="false">Font</string>
    <string name="short_devanagari_font_preview" translatable="false">फ़ॉन्ट</string>
    <string name="short_arabic_font_preview" translatable="false">الخط</string>
    <string name="short_chinese_font_preview" translatable="false">字形</string>
    <string name="short_japanese_font_preview" translatable="false">フォント</string>
    <string name="short_korean_font_preview" translatable="false">세례반</string>
    <string name="short_cyrillic_font_preview" translatable="false">шрифт</string>
    <string name="short_tamil_font_preview" translatable="false">எழுத்துரு</string>
    <string name="short_telugu_font_preview" translatable="false">ఫాంట్</string>
    <string name="short_bengali_font_preview" translatable="false">ফন্ট</string>
    <string name="font_loading">...</string>
    <string name="qod_notification_channel_name">Quote Of The Day</string>
    <string name="notification_channel_description">See Quote of the Day</string>
    <string name="qod_category_inspire">Inspire</string>
    <string name="qod_category_management">Management</string>
    <string name="qod_category_sports">Sports</string>
    <string name="qod_category_life">Life</string>
    <string name="qod_category_funny">Funny</string>
    <string name="qod_category_art">Art</string>
    <string name="qod_category_love">Love</string>
    <string name="qod_category_students">Students</string>
    <string name="pref_toolbar_title">Settings</string>
    <string name="pref_show_qod_key" translatable="false">show_qod</string>
    <string name="pref_show_qod_title">Quote Of The Day</string>
    <string name="pref_show_qod_summary_on">Get Quote of The Day Notification Everyday!</string>
    <string name="pref_show_qod_summary_off">Don\'t show Quote of The Day Notifications.</string>
    <string name="pref_images_safesearch_key" translatable="false">images_safesearch</string>
    <string name="pref_images_safesearch_title">Images SafeSearch</string>
    <string name="pref_images_safesearch_summary_on">Get images suitable for all ages.</string>
    <string name="pref_images_safesearch_summary_off">Get images without any restriction.</string>
    <string name="pref_images_orientation_key">images_orientation</string>
    <string name="pref_images_orientation_title">Images Orientation</string>
    <string name="pref_images_orientation_summary">Orientation of downloadable images.</string>
    <string name="pref_images_orientation_default">all</string>
    <string name="pref_qod_category_key" translatable="false">qod_category</string>
    <string name="pref_qod_category_title">Quote of the Day Categories</string>
    <string name="pref_qod_category_summary">Choose categories for daily quotes.</string>
    <string name="pref_last_notif_key" translatable="false">last_notification</string>
    <string name="pref_save_shared_key" translatable="false">save_shared</string>
    <string name="pref_save_shared_title">Always Save</string>
    <string name="pref_save_shared_summary_on">Save shared images locally too.</string>
    <string name="pref_save_shared_summary_off">Don\'t save shared images locally.</string>
    <string name="pref_last_image_update_key" translatable="false">last_updated_images</string>
    <string name="pref_recent_color_1_key" translatable="false">recent_color_1</string>
    <string name="pref_recent_color_2_key" translatable="false">recent_color_2</string>
    <string name="pref_recent_color_3_key" translatable="false">recent_color_3</string>
    <string name="wiki_base_uri">https://en.wikipedia.org/wiki/</string>
    <string name="wiki_package">org.wikipedia</string>
    <string name="empty_message_qod">Looks like you just started!\nHere you\'ll find your daily quotes listed.</string>
    <string name="empty_message_user_quote">Like a quote from somewhere?\nAdd it here!</string>
    <string name="add_quote">ADD</string>
    <string name="cancel_add_quote">CANCEL</string>
    <string name="label_fragment_add_quotes">ADD QUOTE</string>
    <string name="pre_added_quote">The secret to getting ahead is getting started.</string>
    <string name="pre_added_quote_author">Mark Twain</string>
    <string name="pre_added_quote_category">inspire</string>
    <string name="hint_quote_author">Author</string>
    <string name="hint_quote_category">Category</string>
    <string name="hint_quote">Quote</string>
    <string name="label_save_quote_checkbox">SAVE THIS QUOTE</string>
    <string name="label_save_image">Save</string>
    <string name="label_quote_image">Quote</string>
    <string name="empty_message_quote_images">Your beautifully designed quote images will be here!</string>
    <string name="label_delete_quote_image">Delete</string>
    <string name="label_share_quote_image">Share</string>
    <string name="label_color_chooser_dialog">COLOR CHOOSER</string>
    <string name="label_select_color">SELECT</string>
    <string name="label_cancel_color_chooser_color">CANCEL</string>
    <string name="explanation_saving_storage_permission">This app requires storage permissions to
        save &amp; show images.</string>
    <string name="explanation_save_share_storage_permission">This app requires storage permissions so that it
    can save the image. You can turn off \"Always Save\" feature in settings, however, to avoid saving images before
    sharing.</string>
    <string name="explaination_open_settings">This app requires storage permissions so that it
    can save &amp; show quotes designed by you into the storage.\nPlease grant storage permission in settings.</string>
    <string name="about_app_version_label">App Version</string>
    <string name="about_third_parties_label">Third Parties</string>
    <string name="app_version">Philosofy v%1$s</string>
    <string name="about_license_header">The following software is used in this product: %1$s.\
    This software contains following license and notice below:</string>
    <string name="library_name_picasso">Picasso</string>
    <string name="library_name_photoeditor">PhotoEditor</string>
    <string name="help_page_text">Thank you for installing Philosofy!\nFollowing are few points that may be helpful.</string>
    <string name="help_write">You can write your quotes (&amp; save at the same time if you want to) by pressing
    PEN icon, which will open a dialog for the purpose.</string>
    <string name="help_selection">Note that text effects like text color, font, shadow etc. are applied to &amp;
    only when a text is selected. Tap the text to select it. Double tap a misspelled text to edit it.</string>
    <string name="help_fonts">Delete a font from editor screen by pressing &amp; holding that font. You can add any font
    to editor from hundreds of fonts any time by pressing CART icon, to launch FONTS screen &amp; starring that
    particular font. You can use fonts without adding it to editor screen, however, by simply pressing PEN or the sample font.</string>
    <string name="help_colors">Though there are already material colors provided already you can choose a custom color by
    simply pressing the color palette icon. The first three colors in the colors row are the most recent colors chosen
    from this palette.</string>
</resources>